<resources>
    <string name="app_name">Blood Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blood_care">Blood Care</string>
    <string name="blood_recipient_registration">Blood Recipient Registration</string>
    <string name="sign_up_continue">Sign up continue</string>
    <string name="full_name">Full Name</string>
    <string name="id_number">ID Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login_page">Login Page</string>
    <string name="what_best_describe_you">What best describe you?</string>
    <string name="blood_donor">Blood Donor</string>
    <string name="blood_recipient">Blood Recipient</string>
    <string name="blood_donor_registration">Blood Donor Registration</string>
    <string name="register_now">Register Now</string>
    <string name="recipient">RECIPIENT</string>
    <string name="sachinpal01012003_gmail_com">sachinpal01012003@gmail.com</string>
    <string name="_91_1234567890">+91 1234567890</string>
    <string name="blood_group">Blood Group :</string>
    <string name="a_ve">A+ve</string>
    <string name="email">Email</string>

    <string-array name="bloodgroups">
        <item>Select your blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>