<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="377dp"
            android:layout_height="354dp"
            android:src="@drawable/ic_upper_red"
            android:layout_marginBottom="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-167dp" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/blood_recipient_registration"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_continue"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="111dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_profile_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/registerFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle_590"
                android:hint="@string/full_name"
                android:includeFontPadding="true"
                android:paddingStart="30dp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registerIdNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_590"
                android:hint="@string/id_number"
                android:includeFontPadding="true"
                android:paddingStart="30dp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registerPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_590"
                android:hint="@string/phone_number"
                android:includeFontPadding="true"
                android:paddingStart="30dp"
                android:paddingEnd="0dp" />

            <Spinner
                android:id="@+id/bloodGroupsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_590"
                android:entries="@array/bloodgroups"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingStart="20dp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_590"
                android:hint="@string/e_mail"
                android:includeFontPadding="true"
                android:paddingStart="30dp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_590"
                android:hint="@string/password"
                android:includeFontPadding="true"
                android:paddingStart="30dp"
                android:paddingEnd="0dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_now"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_592" />

            <TextView
                android:id="@+id/backButton"
                android:text="@string/already_registered_sign_in"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="#0A0819"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>