<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/profile_image" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:text="@string/recipient"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#0A0819"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/userProfileImage"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#0A0819"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/userProfileImage"
            android:text="@string/sachinpal01012003_gmail_com"
            android:textAlignment="textStart"
            android:textColor="#0A0819" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userEmail"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/userProfileImage"
            android:text="@string/_91_1234567890"
            android:textAlignment="textStart"
            android:textColor="#0A0819" />

        <TextView
            android:id="@+id/bloodGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumber"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/userProfileImage"
            android:text="@string/blood_group"
            android:textColor="#FF4D4D"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bloodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumber"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/bloodGroupTitle"
            android:text="@string/a_ve"
            android:textColor="#FF4D4D"
            android:textStyle="bold" />

        <!--        </RelativeLayout>-->

        <Button
            android:id="@+id/emailNow"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/bloodGroup"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/buttons_background"
            android:text="@string/email"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:visibility="visible" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/mainLayout"

        android:layout_marginTop="5dp"
        android:background="#E3E3E3" />

</RelativeLayout>