<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/splash_background"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="#fff"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="528dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView

                android:layout_width="150dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/applogo" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_page"
                android:textColor="#0A0819"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/sign_in_to_continue"
                android:textColor="#0A0819"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:hintTextAppearance="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#0A0819"
                        android:textColorHint="#0A0819"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:passwordToggleEnabled="true"
                    app:hintTextAppearance="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textColorHint="#000"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="#0A0819"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttons_background"
                    android:text="@string/sign_in_now"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/backButton"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="#0A0819"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</ScrollView>